# healthcare-ai-scribe

./: .gitignore  explain.text  pyproject.toml  requirements.txt  streamlit_app.py  test.py
app/: main.py  test_rag.py
app/data/: icd10.csv
app/prompts/: soap_prompt.py
app/scheme/: soap_schema.py
app/services/: diarization.py  icd_ingest.py  icd_rag.py  soap_generator.py  transcription.py
data/upload/: audio.m4a
