[project]
name = "healthcare-ai-scribe"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.136.3",
    "google-genai>=2.8.0",
    "langchain>=1.3.9",
    "langchain-google-genai>=4.2.5",
    "langchain-groq>=1.1.3",
    "openai-whisper>=20250625",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.32",
    "uvicorn>=0.49.0",
]
